--- a/rax3000m-nand-main.config
+++ b/rax3000m-nand-main.config
@@ -5953,7 +5953,7 @@ CONFIG_PACKAGE_luci-app-usb-printer=m
 # CONFIG_PACKAGE_luci-app-xinetd is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 # CONFIG_PACKAGE_luci-app-yggdrasil is not set
-CONFIG_PACKAGE_luci-app-zerotier=y
+# CONFIG_PACKAGE_luci-app-zerotier is not set
 # end of 3. Applications
 
 #
