--- a/rax3000m-nand-main.config
+++ b/rax3000m-nand-main.config
@@ -7957,6 +7957,7 @@ CONFIG_PACKAGE_fdisk=m
 # CONFIG_PACKAGE_hd-idle is not set
 # CONFIG_PACKAGE_hdparm is not set
 CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_lua-cjson=y
 # CONFIG_PACKAGE_lvm2 is not set
 # CONFIG_PACKAGE_lvm2-selinux is not set
 # CONFIG_PACKAGE_mdadm is not set
