--- a/rax3000m-nand-main.config
+++ b/rax3000m-nand-main.config
@@ -451,7 +451,7 @@ CONFIG_shadow-all=y
 ## 系统相关
 CONFIG_PACKAGE_luci-app-poweroff=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
-CONFIG_PACKAGE_luci-app-fileassistant=y
+# CONFIG_PACKAGE_luci-app-fileassistant=y
 CONFIG_PACKAGE_luci-app-guest-wifi=y
 CONFIG_PACKAGE_luci-app-onliner=y
 CONFIG_PACKAGE_luci-app-wolplus=y
