--- a/rax3000m-nand-main.config
+++ b/rax3000m-nand-main.config
@@ -299,14 +299,14 @@ CONFIG_PACKAGE_lua-neturl=y
 CONFIG_PACKAGE_luci-i18n-bypass-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-easymesh-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-guest-wifi-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-guest-wifi-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-iptvhelper-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-msd_lite-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-vlmcsd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-vsftpd-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
 CONFIG_PACKAGE_luci-lib-taskd=y
 CONFIG_PACKAGE_luci-lib-xterm=y
 CONFIG_PACKAGE_mdadm=y
@@ -401,7 +401,7 @@ CONFIG_PACKAGE_tc-tiny=y
 CONFIG_PACKAGE_tcpdump=y
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_trojan-plus=y
-CONFIG_PACKAGE_ttyd=y
+# CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_umdns=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_v2dat=y
@@ -417,7 +417,7 @@ CONFIG_PACKAGE_wpad-mesh-openssl=y
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_xz=y
 CONFIG_PACKAGE_xz-utils=y
-CONFIG_PACKAGE_zerotier=y
+# CONFIG_PACKAGE_zerotier=y
 CONFIG_PACKAGE_zram-swap=y
 CONFIG_PARTED_READLINE=y
 # CONFIG_PKG_CHECK_FORMAT_SECURITY is not set
@@ -450,21 +450,21 @@ CONFIG_shadow-all=y
 
 ## 系统相关
 CONFIG_PACKAGE_luci-app-poweroff=y
-CONFIG_PACKAGE_luci-app-autoreboot=y
+# CONFIG_PACKAGE_luci-app-autoreboot=y
 # CONFIG_PACKAGE_luci-app-fileassistant=y
-CONFIG_PACKAGE_luci-app-guest-wifi=y
+# CONFIG_PACKAGE_luci-app-guest-wifi=y
 CONFIG_PACKAGE_luci-app-onliner=y
 CONFIG_PACKAGE_luci-app-wolplus=y
-CONFIG_PACKAGE_luci-app-wifischedule=y
+# CONFIG_PACKAGE_luci-app-wifischedule=y
 CONFIG_PACKAGE_luci-app-ramfree=y
-CONFIG_PACKAGE_luci-app-ttyd=y
+# CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_ddns-scripts=y
 CONFIG_PACKAGE_ddns-scripts_aliyun=y
 CONFIG_PACKAGE_ddns-scripts-cloudflare=y
 CONFIG_PACKAGE_ddns-scripts-dnspod=y
-CONFIG_PACKAGE_luci-app-eqos-mtk=y
-CONFIG_PACKAGE_luci-i18n-eqos-mtk-zh-cn=y
+# CONFIG_PACKAGE_luci-app-eqos-mtk=y
+# CONFIG_PACKAGE_luci-i18n-eqos-mtk-zh-cn=y
 CONFIG_PACKAGE_luci-app-turboacc-mtk=y
 CONFIG_PACKAGE_luci-i18n-turboacc-mtk-zh-cn=y
 CONFIG_PACKAGE_luci-app-upnp=y
@@ -499,14 +499,14 @@ CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
 # CONFIG_PACKAGE_luci-app-bypass_INCLUDE_NaiveProxy=y
 # CONFIG_PACKAGE_luci-app-bypass_INCLUDE_Socks5_Proxy=y
 # CONFIG_PACKAGE_luci-app-bypass_INCLUDE_V2ray_plugin=y
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-openclash=y
+# CONFIG_PACKAGE_luci-app-passwall=y
+# CONFIG_PACKAGE_luci-app-openclash=y
 
 ## 去广告
-CONFIG_PACKAGE_luci-app-adguardhome=y
+# CONFIG_PACKAGE_luci-app-adguardhome=y
 
 ## 内网穿透
-CONFIG_PACKAGE_luci-app-zerotier=y
+# CONFIG_PACKAGE_luci-app-zerotier=y
 
 ## 其他
 # CONFIG_PACKAGE_luci-app-pushbot=y
@@ -521,7 +521,7 @@ CONFIG_PACKAGE_luci-app-zerotier=y
 
 ## 主题相关
 CONFIG_PACKAGE_luci-theme-argon=y
-CONFIG_PACKAGE_luci-app-argon-config=y
+# CONFIG_PACKAGE_luci-app-argon-config=y
 # CONFIG_PACKAGE_luci-theme-design=y
 # CONFIG_PACKAGE_luci-theme-openwrt-2020=y
 # CONFIG_PACKAGE_luci-theme-bootstrap=y
