--- a/rax3000m-nand-main.config
+++ b/rax3000m-nand-main.config
@@ -531,14 +531,14 @@ CONFIG_PACKAGE_luci-theme-argon=y
 #CONFIG_PACKAGE_luci-app-quickstart=y
 
 # 5G模组短信插件
-# CONFIG_PACKAGE_luci-app-sms-tool=y
+CONFIG_PACKAGE_luci-app-sms-tool=y
 
 # 5G模组管理插件+AT工具
-#CONFIG_PACKAGE_sms-tool=y
-#CONFIG_PACKAGE_luci-app-modem=y
+CONFIG_PACKAGE_sms-tool=y
+CONFIG_PACKAGE_luci-app-modem=y
 
 # 串口调试工具
-#CONFIG_PACKAGE_minicom=y
+CONFIG_PACKAGE_minicom=y
 
 ## 工具
 #CONFIG_PACKAGE_coremark=y
