--- a/rax3000m-nand-main.config
+++ b/rax3000m-nand-main.config
@@ -491,7 +491,7 @@ CONFIG_PACKAGE_luci-i18n-mtwifi-cfg-zh-cn=y
 
 ## 存储相关
 # CONFIG_PACKAGE_luci-app-samba4=y
-CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
 
 ## 科学上网和代理应用
 # CONFIG_PACKAGE_luci-app-bypass=y
